# RadProgressor

./: README.md  env.example  pyproject.toml  requirements.txt
app/: config.py  main.py
app/models/: cv_model.py  genai.py  nlp_model.py  progression.py
app/schemas/: io.py
app/services/: inference.py  parsing.py  storage.py
data/samples/: README.md
scripts/: seed_demo.py
tests/: test_smoke.py
ui/: app.py
